fix white space in files

--- a/themes/sgsc/sass/_about-our-team.scss
+++ b/themes/sgsc/sass/_about-our-team.scss
@@ -1,102 +1,88 @@
 .page-template-page-about-our-team {
-
-.entry-header {
-  max-width: 480px;
-  margin: 0 auto;
-  height: 275px;  
-  position: relative;
-  @media screen and (min-width: 480px) {
-    max-width: 1024px;
-    height: 375px; 
+  .entry-header {
+    max-width: 480px;
+    margin: 0 auto;
+    height: 275px;  
+    position: relative;
+    @media screen and (min-width: 480px) {
+      max-width: 1024px;
+      height: 375px; 
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: 65% 0%;
+      position: absolute;
+    }
   }
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: 65% 0%;
+  .entry-title {
     position: absolute;
-  }
-}
-
-.entry-title {
-  position: absolute;
-  bottom: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 118px;
-  background: $orange;
-  margin-bottom: 0;
-}
-
-.entry-content p {
-  margin: 15px 22px;
-  text-indent: 15px;
-}
-
-.about-links {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  p {
-    background: $orange;
-    width: 277px;
-    height: 96px;
-    border: 4px solid $orange;
-    text-align: center;
+    bottom: 0px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin: 32px 0 0 0;
-    font-family: $font__header;
-    font-size: $font_m-h1;
+    justify-content: center;
+    width: 100%;
+    height: 118px;
+    background: $orange;
+    margin-bottom: 0;
   }
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  list-style-type: none;
-}
-
-body {
+  .entry-content p {
+    margin: 15px 22px;
+    text-indent: 15px;
+  }
+  .about-links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    p {
+      background: $orange;
+      width: 277px;
+      height: 96px;
+      border: 4px solid $orange;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 32px 0 0 0;
+      font-family: $font__header;
+      font-size: $font_m-h1;
+    }
+  }
+  ul {
     margin: 0;
-}
+    padding: 0;
+  }
+  li {
+    list-style-type: none;
+  }
+  body {
+      margin: 0;
+  }
+  ul li:nth-child(odd) img {
+    padding-left: 22px;
+    background-color: $blue;
+  }
+  ul li:nth-child(even) img {
+    padding-right: 22px;
+    background-color: $blue;
+  }
+  .member-container {
+    margin: 0 22px;
+  }
 
-ul li:nth-child(odd) img {
-  padding-left: 22px;
-  background-color: $blue;
-}
-
-ul li:nth-child(even) img {
-  padding-right: 22px;
-  background-color: $blue;
-}
-
-.member-container {
-  margin: 0 22px;
-}
-
-span.text {
+  span.text {
     color: rgba(92,142,220,1);
-}
-
- .cfs-hyperlink {
+  }
+  .cfs-hyperlink {
     text-decoration: none;
   }
-
-.member-email, .member-bio {
-  margin-bottom: 20px;
-}
-
-.member-picture {
-  width: 100%;
-}
-
+  .member-email, .member-bio {
+    margin-bottom: 20px;
+  }
+  .member-picture {
+    width: 100%;
+  }
   .about-back-btn {
     p {
       border: solid 2px black;
@@ -128,81 +114,67 @@ span.text {
 
 @media all and (min-width: 480px) {
 
-.page-template-page-about-our-team {
-
-  .entry-header {
-    img {
-      object-position: 45% 0%;
+  .page-template-page-about-our-team {
+    .entry-header {
+      img {
+        object-position: 45% 0%;
+      }
     }
-  }
-
-  .entry-content {
-    column-count: 2;
-    P {
-      font-size: $font__body;
+    .entry-content {
+      column-count: 2;
+      p {
+        font-size: $font__body;
+        font-size: $font_d-sub-body;
+      }
+    }
+    .our-team-paragraph {
       font-size: $font_d-sub-body;
+      line-height: 24px;
+    }
+    .team-members {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between
+    }
+    .member {
+      display: flex;
+      flex-direction: column;
+      flex-basis: 47%;
+    }
+    .member-picture {
+      height: 282px;
+      width: 100%;
+      margin-bottom: 20px;
+      margin-top: 40px;
+    }
+    .member-name {
+      font-size: $font_d-body;
+      font-weight: bold;
+    }
+    .member-email.member-container {
+      margin-bottom: 20px;
+    }
+    .member-container {
+      margin: 0 0;
+    }
+    .member-position, .member-email, .member-bio {
+      font-size: $font_d-sub-body;
+      line-height: 22px;
+    }
+    ul li:nth-child(odd) img {
+      padding-left: 38px;
+    }
+    ul li:nth-child(even) img {
+      padding-right: 38px;
+    }
+    .member-picture {
+      height: auto;
+      max-width: 100%;
+      margin-bottom: 20px;
+      margin-top: 40px;
+    }
+    .about-back-btn {
+      display: none;
     }
   }
-
-  .our-team-paragraph {
-    font-size: $font_d-sub-body;
-    line-height: 24px;
-  }
-
-  .team-members {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between
-  }
-
-  .member {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 47%;
-  }
-
-  .member-picture {
-    height: 282px;
-    width: 100%;
-    margin-bottom: 20px;
-    margin-top: 40px;
-  }
-
-  .member-name {
-    font-size: $font_d-body;
-    font-weight: bold;
-  }
-
-  .member-email.member-container {
-    margin-bottom: 20px;
-  }
-
-  .member-container {
-    margin: 0 0;
-  }
-
-  .member-position, .member-email, .member-bio {
-    font-size: $font_d-sub-body;
-    line-height: 22px;
-  }
-
-  ul li:nth-child(odd) img {
-    padding-left: 38px;
-  }
-
-  ul li:nth-child(even) img {
-    padding-right: 38px;
-  }
-
-  .member-picture {
-    height: auto;
-    max-width: 100%;
-    margin-bottom: 20px;
-    margin-top: 40px;
-  }
-
-  .about-back-btn {
-    display: none;
-  }
-}
 }
